<resources>
    <string name="app_name">Photo Fun</string>
    <string name="segment">Segment</string>
    <string name="segment_process">Segmenting…</string>
    <string name="take_pic">Take pic</string>
    <string name="load_pic">Load pic</string>
    <string name="save">Save</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="video_fragment">Video fragment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="video">Video</string>
    <string name="photo">Photo</string>
    <string name="take_video">Take video</string>
    <string name="segment_and_save">Segment and save</string>
    <string name="amount_of_clusters">Amount of clusters:</string>
    <string name="progress">Progress:</string>
    <string name="load_video">Load video</string>
</resources>
