<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@mipmap/fun" />
<LinearLayout

        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.cels.photofun.MainActivity" >


    <com.cels.photofun.TableRowExtended
        android:id="@+id/panelTopPhoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/buttonChangePhotoFragment"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onClickPhoto"
            android:text="@string/video"
            android:drawableTop="@drawable/ic_change_on_video"
            android:textSize="12sp"
            />



        <Button
            android:id="@+id/buttonTakePic"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onClickPhoto"
            android:drawableTop="@drawable/ic_photo"
            android:text="@string/take_pic"
            android:textSize="12sp"/>

        <Button
            android:id="@+id/buttonSegmentPhoto"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.0"
            android:onClick="onClickPhoto"
            android:drawableTop="@drawable/ic_segment"
            android:textSize="12sp"
            android:text="@string/segment" />

        <Button
            android:id="@+id/buttonLoadPic"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onClickPhoto"
            android:drawableTop="@drawable/ic_load"
            android:text="@string/load_pic"
            android:textSize="12sp"/>

        <Button
            android:id="@+id/buttonSavePhoto"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onClickPhoto"
            android:drawableTop="@drawable/ic_save"
            android:text="@string/save"
            android:textSize="12sp"
             />
    </com.cels.photofun.TableRowExtended>

    <com.cels.photofun.TableRowExtended
        android:id="@+id/panelTopVideo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/buttonChangeVideoFragment"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.7"
            android:onClick="onClickVideo"
            android:drawableTop="@drawable/ic_change_on_photo"
            android:text="@string/photo"
            android:textSize="12sp"/>

        <Button
            android:id="@+id/buttonTakeVideo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onClickVideo"
            android:drawableTop="@drawable/ic_videocam"
            android:text="@string/take_video"
            android:textSize="12sp"/>

        <Button
            android:id="@+id/buttonSegmentVideo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onClickVideo"
            android:drawableTop="@drawable/ic_segment_save"
            android:text="@string/segment_and_save"
            android:textSize="12sp" />

        <Button
            android:id="@+id/buttonLoadVideo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onClickVideo"
            android:drawableTop="@drawable/ic_load_video"
            android:text="@string/load_video"
            android:textSize="12sp"/>
    </com.cels.photofun.TableRowExtended>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amount_of_clusters"
            android:layout_gravity="center_vertical"/>

        <SeekBar
            android:id="@+id/seekBar2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="15"
            android:progress="1" />
    </TableRow>

    <TableRow
        android:id="@+id/picTableRow"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"></FrameLayout>
    </TableRow>
</LinearLayout>
</RelativeLayout>